change settings path directory (load, save open)

--- a/FileChatServer/FileChatServer.vcxproj.filters
+++ b/FileChatServer/FileChatServer.vcxproj.filters
@@ -44,6 +44,9 @@
     <ClCompile Include="modules\file_watcher.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ChatDirController.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="async_console_win.h">
@@ -53,6 +56,9 @@
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="modules\file_watcher.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="ChatDirController.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
