--- a/FileChatServer/FileChatServer.vcxproj
+++ b/FileChatServer/FileChatServer.vcxproj
@@ -94,6 +94,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="async_console_win.cpp" />
+    <ClCompile Include="ChatDirController.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="modules\colors.cpp" />
     <ClCompile Include="modules\config.cpp" />
@@ -105,6 +106,7 @@
     <QtMoc Include="async_console_win.h" />
   </ItemGroup>
   <ItemGroup>
+    <QtMoc Include="ChatDirController.h" />
     <ClInclude Include="modules\arg_parser.h" />
     <QtMoc Include="modules\file_watcher.h" />
     <ClInclude Include="modules\fontFormater.h" />
